deployments/clusterSettings/ingress-template.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cryptoadvice-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /cryptoadvice/*
        backend:
          serviceName: app
          servicePort: 8080
      - path: /cryptoadvice/api/*
        backend:
          serviceName: api
          servicePort: 8080
